force-app/main/default/objects/Intake_Response__c/Intake_Response__c.object-meta.xml
<CustomObject>
    <label>Intake Response</label>
    <nameField>
        <label>Intake Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>