force-app/main/default/objects/Intake_Response__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Intake Responses</relationshipLabel>
    <relationshipName>Intake_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>