force-app/main/default/objects/Intake_Response__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Intake Responses</relationshipLabel>
    <relationshipName>Intake_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>